; ModuleID = '/home/carl/AnghaBench/micropython/drivers/cc3100/src/extr_nonos.c__SlNonOsMainLoopTask.c'
source_filename = "/home/carl/AnghaBench/micropython/drivers/cc3100/src/extr_nonos.c__SlNonOsMainLoopTask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32*, i32 (i32)* }
%struct.TYPE_5__ = type { i64 }

@NONOS_MAX_SPAWN_ENTRIES = common dso_local global i64 0, align 8
@g__SlNonOsCB = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@RxIrqCnt = common dso_local global i64 0, align 8
@g_pCB = common dso_local global %struct.TYPE_5__* null, align 8
@NONOS_RET_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_SlNonOsMainLoopTask() #0 {
  %1 = alloca i64, align 8
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32 (i32)*, align 8
  store i64 0, i64* %1, align 8
  store i64 0, i64* %1, align 8
  br label %4

4:                                                ; preds = %32, %0
  %5 = load i64, i64* %1, align 8
  %6 = load i64, i64* @NONOS_MAX_SPAWN_ENTRIES, align 8
  %7 = icmp ult i64 %5, %6
  br i1 %7, label %8, label %35

8:                                                ; preds = %4
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @g__SlNonOsCB, i32 0, i32 0), align 8
  %10 = load i64, i64* %1, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i64 %10
  store %struct.TYPE_4__* %11, %struct.TYPE_4__** %2, align 8
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 1
  %14 = load i32 (i32)*, i32 (i32)** %13, align 8
  store i32 (i32)* %14, i32 (i32)** %3, align 8
  %15 = load i32 (i32)*, i32 (i32)** %3, align 8
  %16 = icmp ne i32 (i32)* null, %15
  br i1 %16, label %17, label %31

17:                                               ; preds = %8
  %18 = load i64, i64* @RxIrqCnt, align 8
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** @g_pCB, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %18, %21
  br i1 %22, label %23, label %26

23:                                               ; preds = %17
  %24 = load i32 (i32)*, i32 (i32)** %3, align 8
  %25 = call i32 %24(i32 0)
  br label %26

26:                                               ; preds = %23, %17
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 1
  store i32 (i32)* null, i32 (i32)** %28, align 8
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  store i32* null, i32** %30, align 8
  br label %31

31:                                               ; preds = %26, %8
  br label %32

32:                                               ; preds = %31
  %33 = load i64, i64* %1, align 8
  %34 = add i64 %33, 1
  store i64 %34, i64* %1, align 8
  br label %4

35:                                               ; preds = %4
  %36 = load i32, i32* @NONOS_RET_OK, align 4
  ret i32 %36
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
